--- a/eduardo/organizado/html/index.html
+++ b/eduardo/organizado/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -12,9 +12,11 @@
     <h1>Bem-vindo ao Futuro da Tecnologia!</h1>
 
     <img src="../img/logo.png" alt="Imagem Futurista">
-
+    <!-- essa div esta puxando o background animado do particles js -->
     <div id="particles-js"></div>
 
+
+    <!-- esse script esta importando a biblioteca particle js para o site -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="../js/script.js"></script>
 </body>
